# cuda-gemm

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  results.csv  run_benchmarks.sh
benchmarks/: benchmark.cu
kernels/cpu-naive/: Makefile  README.md  cpu_naive.c  cpu_naive.h  test_kernel.c
kernels/cuda-naive/: README.md
kernels/cuda-shared-memory/: README.md
kernels/cuda-warp-shufffle/: README.md
scratch/: test_wmma  test_wmma.cu
shared/: matrix_utils.c  matrix_utils.h
src/kernels/: .gitignore  Makefile  README.md  cpu_naive.cpp  cpu_naive.h  cuda_coalesced.cu  cuda_coalesced.h  cuda_cougar.cu  cuda_cougar.h  cuda_naive.cu  cuda_naive.cuh  cuda_naive.h  cuda_rf_block.cu  cuda_rf_block.cuh  cuda_rf_block.h  cuda_shared.cu  cuda_shared.cuh  cuda_shared.h  cuda_shared_32.cu  cuda_shared_32.h  cuda_shuffle.cu  cuda_shuffle.h  cuda_shuffle_claude.cu  cuda_shuffle_claude.h  cuda_shuffle_nonshared.cu  cuda_shuffle_nonshared.h  cuda_shuffle_systolic.cu  cuda_shuffle_systolic.h  cuda_tensor_core.cu  cuda_tensor_core.h  cuda_warp_shuffle.cuh  test_kernels.c  test_kernels.cu  types.h
src/shared/: matrix_utils.cpp  matrix_utils.h
test/: test_kernels.cu
